--- a/files/system.motd.erb
+++ b/files/system.motd.erb
@@ -1,7 +1,5 @@
 
 ---------------------------------------------------------------
 - This server is managed by puppet (master:<%= puppet_server %>)
-- https://wiki.ecommera.com/display/INFSTRC/Puppet
+- Docs coming soon.
 ---------------------------------------------------------------
-- Puppet environment: <%= environment %>
--------------------------
